Update title from '李小明' to '李小李'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Xiaoming Li (李小明)</title>
+  <title>Xiaoming Li (李小李)</title>
 
   <meta name="author" content="Xiaoming Li">
   <meta name="viewport" content="width=device-width, initial-scale=1">
